# prompt-refinery

./: .env.example  .gitignore  README.md  prompt_refinery.py  pyproject.toml  quickstart.py  refinery_profile.json  requirements.txt
examples/: README.md  launch_checklist_payload.json  mcp_tools_call_request.json  mcp_tools_call_response.json  soc2_input_prompt.txt  soc2_quality_targets.txt  soc2_repaired_prompt.txt
prompt_refinery/: __init__.py  cli.py  core.py  mcp_server.py
scripts/: start_cli.sh  start_mcp_stdio.sh
tests/: test_intent_spec.py  test_mcp_server.py  test_quality_targets.py
